crates/gobley-uniffi-bindgen/src/snapshots/gobley_uniffi_bindgen__snapshot_tests__async_fns.stub.kt.snap
---
source: crates/gobley-uniffi-bindgen/src/snapshot_tests.rs
expression: "bindings.stub.as_deref().unwrap_or(\"\")"
---


@file:Suppress("RemoveRedundantBackticks")

package uniffi.async_fns

// Public interface members begin here.








public actual open class AsyncResource: Disposable, AsyncResourceInterface {

    /**
     * This constructor can be used to instantiate a fake object. Only used for tests. Any
     * attempt to actually use an object constructed this way will fail as there is no
     * connected Rust object.
     */
    public actual constructor(noPointer: NoPointer)

    public actual constructor() {
        TODO()
    }

    actual override fun destroy() {
        TODO()
    }

    actual override fun close() {
        TODO()
    }

    
    public actual override suspend fun `load`(`id`: kotlin.UInt): kotlin.String {
        TODO()
    }

    public actual override suspend fun `refresh`() {
        TODO()
    }


    
    
    public actual companion object
    
}


public actual suspend fun `fetch`(`url`: kotlin.String): kotlin.String {
    TODO()
}
