crates/gobley-uniffi-bindgen/src/snapshots/gobley_uniffi_bindgen__snapshot_tests__callbacks.stub.kt.snap
---
source: crates/gobley-uniffi-bindgen/src/snapshot_tests.rs
expression: "bindings.stub.as_deref().unwrap_or(\"\")"
---


@file:Suppress("RemoveRedundantBackticks")

package uniffi.callbacks

// Public interface members begin here.









public actual fun `invokeLogger`(`logger`: Logger, `message`: kotlin.String): kotlin.Boolean {
    TODO()
}

public actual fun `registerLogger`(`logger`: Logger) {
    TODO()
}
